@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-20T01:22:19Z",
+  "timestamp" : "2024-06-20T12:36:20Z",
   "count_outdated" : 7852,
   "uniques_outdated" : 3458,
-  "count" : 8150,
-  "uniques" : 3612,
+  "count" : 8176,
+  "uniques" : 3628,
   "clones" : [
     {
       "timestamp": "2024-06-08T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 17,
       "uniques_minmax": [ 1, 17 ],
       "uniques_decinc": [ 0, 17 ]
+    },
+    {
+      "timestamp": "2024-06-20T00:00:00Z",
+      "count": 26,
+      "count_minmax": [ 26, 26 ],
+      "count_decinc": [ 0, 26 ],
+      "uniques": 16,
+      "uniques_minmax": [ 16, 16 ],
+      "uniques_decinc": [ 0, 16 ]
     }
   ]
 }
