@@ -1,6 +1,6 @@
 {
-  "count": 298,
-  "uniques": 120,
+  "count": 324,
+  "uniques": 130,
   "clones": [
     {
       "timestamp": "2024-06-08T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2024-06-19T00:00:00Z",
       "count": 23,
       "uniques": 17
+    },
+    {
+      "timestamp": "2024-06-20T00:00:00Z",
+      "count": 26,
+      "uniques": 16
     }
   ]
 }
